k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2 # We are spinning up two instances of the API for high availability!
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: registry.gitlab.com/protikpatra1-group/devopsshop/backend:latest 
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
