k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: gitlab-secret
      containers:
        - name: frontend
          # Notice we changed 'backend' to 'frontend' here
          image: registry.gitlab.com/protikpatra1-group/devopsshop/frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80 
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
